Fixed bugs with History page overflow

--- a/src/pages/History.css
+++ b/src/pages/History.css
@@ -14,7 +14,7 @@ body {
 .lifetime_history {
     margin: 1rem auto;
     width: 95%;
-    padding: 1rem;
+    padding: 1rem; 
     background-color: white;
     border-radius: 1rem;
     /* border: 2px solid black; */
@@ -25,12 +25,15 @@ body {
     margin: 1.5rem auto;
     display: flex;
     justify-content: center;
+    /* flex-wrap: wrap; */
     flex-wrap: wrap;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .lifetime_subject {
     padding: 15px;
-    margin: 0 1rem;
+    margin: 1rem 1rem;
     width: 20%;
     border-radius: 1rem;
     color: white;
@@ -40,6 +43,8 @@ body {
 }
 
 .weekly_history {
+    overflow-x: hidden;
+    overflow-y: auto;
     margin: 1rem auto;
     width: 95%;
     padding: 1rem;
@@ -66,8 +71,8 @@ body {
 .weekly_section {
     width: 80%;
     margin: 1rem auto;
-    /* border: 2px solid black; */
-    box-shadow: 0 0 2px 2px gray;
+    border: 2px solid black;
+    /* box-shadow: 0 0 2px 2px gray; */
     border-radius: 1rem;
 }
 
@@ -87,7 +92,7 @@ body {
 
 .weekly_subjects {
     padding: 15px;
-    margin: 0 1rem;
+    margin: 1rem 1rem;
     width: 20%;
     color: white;
     border: 2px solid black;
